<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:background="@color/black"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:padding="32dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/map_img_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/map_img"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:contentDescription="@string/map_image"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/map_image" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/city_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/city_and_state_background"
            android:fontFamily="@font/inter_medium"
            android:maxWidth="120dp"
            android:paddingHorizontal="12dp"
            android:paddingVertical="5dp"
            android:text="@string/city_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="@+id/map_img_container"
            app:layout_constraintTop_toBottomOf="@+id/map_img_container" />

        <TextView
            android:id="@+id/state_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/city_and_state_background"
            android:fontFamily="@font/inter_medium"
            android:maxWidth="120dp"
            android:paddingHorizontal="12dp"
            android:paddingVertical="5dp"
            android:text="@string/state_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="@+id/map_img_container"
            app:layout_constraintTop_toTopOf="@+id/city_name" />

        <TextView
            android:id="@+id/ride_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/ride_id"
            android:textColor="@color/light_text"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/state_name"
            app:layout_constraintStart_toStartOf="@+id/city_name"
            app:layout_constraintTop_toBottomOf="@+id/city_name" />

        <TextView
            android:id="@+id/origin_station"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/origin_station"
            android:textColor="@color/light_text"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/ride_id"
            app:layout_constraintStart_toStartOf="@+id/ride_id"
            app:layout_constraintTop_toBottomOf="@+id/ride_id" />

        <TextView
            android:id="@+id/station_path"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/station_path"
            android:textColor="@color/light_text"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/origin_station"
            app:layout_constraintStart_toStartOf="@+id/origin_station"
            app:layout_constraintTop_toBottomOf="@+id/origin_station" />

        <TextView
            android:id="@+id/date_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/date"
            android:textColor="@color/light_text"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/station_path"
            app:layout_constraintStart_toStartOf="@+id/station_path"
            app:layout_constraintTop_toBottomOf="@+id/station_path" />

        <TextView
            android:id="@+id/distance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/distance"
            android:textColor="@color/light_text"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/date_tv"
            app:layout_constraintStart_toStartOf="@+id/date_tv"
            app:layout_constraintTop_toBottomOf="@+id/date_tv" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>